--- a/app/autoindex.html
+++ b/app/autoindex.html
@@ -2,12 +2,12 @@
 
 {% block meta %}
   {{ super() }}
-  <link rel="stylesheet"
-    href="{{ url_for('static', filename='myautoindex.css') }}" />
+    <h1>HEJ</h1>
+  <link rel="stylesheet" href="{{ url_for('static', filename='myautoindex.css') }}" />
 {% endblock %}
 
 {% block aside %}
-    <div style="width: 500px; margin: 30px auto;">
+    <div style="width: 600px; margin: 30px auto;">
     <h2>My apka</h2>
 {% endblock %}
 
